# scclone

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/config/: Config.cpp
lib/hetcaller/: HetCaller.cpp  HetCaller.h
lib/inputparser/: InputParser.cpp
lib/pca/: PCA.cpp
lib/threadpool/: ThreadPool.cpp
src/: scclone.cpp
testdata/: example.txt
util/: simu_clone_tree.m  simu_mutation_data.m
